setup and input.
- fc2::setup added. This will install or calibrate FC2K or ZombieFC2 depending on the protection mode being used.
- FC2T_FUNCTION added for better fc2.hpp customization (if needed).
- fc2::input added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,9 @@ project(example_call)
 project(example_memory)
 project(example_http)
 project(example_ping_pong)
+project(example_imgui)
+project(example_protection)
+project(example_input)
 
 set(CMAKE_CXX_STANDARD 20)
 
@@ -18,3 +21,13 @@ add_executable(example_call examples/call/main.cc)
 add_executable(example_memory examples/memory/main.cc)
 add_executable(example_http examples/http/main.cc)
 add_executable(example_ping_pong examples/ping_pong/main.cc)
+add_executable(example_protection examples/protection/main.cc)
+add_executable(example_input examples/input/main.cc)
+add_executable(example_imgui examples/imgui_vulkan/vulkan.cc
+        examples/imgui_vulkan/imgui/imgui_impl_glfw.cpp
+        examples/imgui_vulkan/imgui/imgui_impl_vulkan.cpp
+        examples/imgui_vulkan/main.cc
+        examples/imgui_vulkan/vulkan.hpp
+        examples/imgui_vulkan/render.cc)
+
+target_link_libraries(example_imgui glfw vulkan imgui)
